# NLP100

./: .gitignore  pyproject.toml  unix_split_aa  unix_split_ab  unix_split_ac  unix_split_ad  unix_split_ae  unix_split_af  unix_split_ag  unix_split_ah  unix_split_ai  unix_split_aj
finetuned_sentiment_model/: config.json  generation_config.json
finetuned_sentiment_model/checkpoint-126/: trainer_state.json
finetuned_sentiment_model/checkpoint-189/: trainer_state.json
output/ch10/: out90.txt  out91.txt  out92.txt  out93.txt  out94.txt  out95.txt  out96.txt  out97.txt  out98.txt  out99.txt
output/ch2/: 10_out.txt  11_out.txt  12_out.txt  13_out.txt  14_out.txt  16_out_py.txt  16_out_unix.txt  17_out.txt  18_out_py.txt  18_out_unix.txt  19_out_py.txt  19_out_unix.txt
output/ch3/: 20_out.txt  21_out.txt  22_out.txt  23_out.txt  27_out.txt  28_out.txt
output/ch4/: 30_out.txt  31_out.txt  34_out.txt  36_out.txt  37_out.txt  38_out.txt  out_33.txt
output/ch5/: 40_out.txt  41_out.txt  42_out.txt  43_out.txt  44_out.txt  45_out.txt  46_out.txt  47_out.txt  48_variance.csv  48_variance.txt  49_out.txt
output/ch6/: 51_out.txt  52_out.txt  53_out.txt  54_out.txt  55_out.txt  56_out.txt  57_out.txt  58_out.txt
output/ch7/: 60_out.txt  61_out.txt  62_logreg.joblib  63_dev_pred.txt  63_out.txt  64_out.txt  65_out.txt  66_out.txt  67_out.txt  68_out.txt  69_out.txt
output/ch8/: 70_out.txt  71_out.txt  72_out.txt  73_out.txt  dev.pkl  out74.txt  out75.txt  out76.txt  out77.txt  out78.txt  out79.txt  w_linear.pt
output/ch9/: dev_data.pth  out80.txt  out81.txt  out82.txt  out83.txt  out84.txt  out86.txt  out87.txt  out88.txt  out89.txt
(+133 files in other folders)
