[project]
name = "nlp100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "matplotlib>=3.10.7",
    "mecab>=0.996.12",
    "mediawikiapi>=1.3",
    "numpy>=2.3.4",
    "sudachidict-core>=20251022",
    "sudachipy>=0.6.10",
]
