[project]
name = "nlp100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "gensim>=4.4.0",
    "ginza>=5.2.0",
    "google-genai>=1.52.0",
    "ja-ginza>=5.2.0",
    "matplotlib>=3.10.7",
    "mecab>=0.996.12",
    "mediawikiapi>=1.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "sudachidict-core>=20251022",
    "sudachipy>=0.6.10",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
